# mliot-embeddedc-2026-hw

week01/: buoi01_nguyenphamtannghiem.c
week02/: answer.txt  main.c
week03/: answer.txt  build_and_flash.bat
week04/: answer.txt
week04/GPIO_Practise/: CMakeLists.txt  main.c
week04/GPIO_Practise/Core/Src/: main.c  stm32f4xx_hal_msp.c
week04/Task 3/: CMakeLists.txt  build_and_flash.bat
week04/Task 3/Core/Src/: main.c
week04/Task 4/Core/Src/: main.c
week04/Task 5/Core/Src/: main.c
